# mcp-sofa

./: .gitignore  README.md  mcp-sofa.service  mcp-sofa.sysconfig  pyproject.toml
.github/: dependabot.yml
.github/workflows/: reuse.yml
mcp_sofa/: __init__.py  server.py
