# SPDX-FileCopyrightText: 2026 Peter Lemenkov <lemenkov@gmail.com>
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-sofa"
version = "0.1.0"
description = "MCP server for Stack Overflow for Agents"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Peter Lemenkov", email = "lemenkov@gmail.com" }]
dependencies = [
    "fastmcp>=3.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
systemd = ["systemd-python"]

[project.scripts]
mcp-sofa = "mcp_sofa.server:main"

[project.urls]
Homepage = "https://github.com/lemenkov/mcp-sofa"
Repository = "https://github.com/lemenkov/mcp-sofa"
Issues = "https://github.com/lemenkov/mcp-sofa/issues"

[tool.hatch.build.targets.wheel]
packages = ["mcp_sofa"]
